# odoo-rpc

./: Cargo.toml  lorem.html
crates/odoo-18-quotations-to-19/: Cargo.toml
crates/odoo-18-quotations-to-19/src/: main.rs
crates/odoo-json2/: Cargo.toml
crates/odoo-json2/src/: client.rs  error.rs  lib.rs  utils.rs  version.rs
crates/odoo-rpc/: Cargo.toml
crates/odoo-rpc/src/: client.rs  error.rs  jsonrpc.rs  lib.rs  utils.rs
crates/odoo-rpc/src/utils/: fields_get.rs
src/: error.rs  lib.rs  main.rs  odoo_18.rs  utils.rs
src/odoo_18/: version.rs
