[package]
name = "odoo-18-quotations-to-19"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ciborium = "0.2"
dotenvy = "0.15"
env_logger = "0.11.9"
fern = "0.7.1"
jsonrpsee = { version = "0.26", features = ["http-client"] }
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
struct-field-names-as-array = "0.3.0"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
url = "2"
