[workspace]
members = ["./crates/*"]
default-members = ["./crates/odoo-18-quotations-to-19"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
dotenvy = "0.15"
either = { version = "1.15" }
env_logger = "0.11"
fern = "0.7"
jsonrpsee = { version = "0.26" }
log = "0.4"
serde = { version = "1" }
serde_json = "1"
struct-field-names-as-array = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
url = "2"
odoo-rpc = { path = "./crates/odoo-rpc" }

[workspace.package]
author = ["Dirk Tony tony@smsconsulting-mg.com"]
version = "0.1.0"
edition = "2024"
