[package]
name = "odoo-18-quotations-to-19"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
odoo-rpc.workspace = true
tokio = { workspace =true, features = ["rt-multi-thread", "sync", "time", "macros"] }
struct-field-names-as-array.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
url.workspace = true
serde_json.workspace = true
